--- a/css/styles.scss
+++ b/css/styles.scss
@@ -70,7 +70,7 @@ body {
         padding-top: 1em;
         font-size: $base-font-size;
         line-height: $base-line-height;
-        grid-template-columns: 1fr 80% .1fr;
+        grid-template-columns: 1fr 80% 1fr;
         grid-template-rows: 1fr auto;
         grid-template-areas: 
             "header main right"
@@ -80,7 +80,7 @@ body {
     @media #{$mq-medium} {
         font-size: $base-font-size;
         line-height: $base-line-height*1.05;
-        grid-template-columns: 1fr 60% .5fr;
+        grid-template-columns: 1fr 60% 1fr;
     }
   
     @media #{$mq-xlarge} {
