--- a/css/styles.scss
+++ b/css/styles.scss
@@ -156,10 +156,10 @@ strong {
 h1, h2 {
     padding: .5em 1.5em .5em 1.5em;
     margin: 0em;
-    color: $font-color;
+    color: $font-color-strong;
     text-align: center;
     font-family: $font-title;
-    font-weight: lighter;
+    font-weight: normal;
   }
 
 h3, h4, h5, h6 {
@@ -302,6 +302,17 @@ blockquote {
     margin: .5em 1em .5em 1em;
     //border-top-right-radius: 4px;
     //border-bottom-right-radius: 4px;
+}
+
+#postponed {
+    rotate:30deg;
+    position: absolute;
+    font-size: xxx-large;
+    left: 50%;
+    transform: scaleX(1.5);
+    width: 300px;
+    margin-left: -226px;
+    -webkit-text-stroke: 1.5px black;
 }
 
 #header {
