fix transform to work on more browsers + strikethrough text

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -305,14 +305,18 @@ blockquote {
 }
 
 #postponed {
-    rotate:30deg;
     position: absolute;
     font-size: xxx-large;
     left: 50%;
-    transform: scaleX(1.5);
     width: 300px;
     margin-left: -226px;
     -webkit-text-stroke: 1.5px black;
+
+    transform:rotate(30deg) scaleX(1.5);
+}
+
+#strike {
+    text-decoration: line-through;
 }
 
 #header {
